Fixed FDB-related warnings at runtime